# octen-embeddings-server

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  MATURITY_REPORT.md  PHASE4-CLEANUP.md  README.md  SPEC.md  benchmark.py  com.openclaw.octen-embeddings.plist  convert_model.py  openclaw-config-patch.json5  pyproject.toml  requirements.txt  server.py  validate.py
.github/workflows/: ci.yml
tests/: conftest.py  test_server.py
